k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  namespace: solucao-laser
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-solucao-laser"
spec:
  tls:
  - hosts:
    - "solucao-laser.api-danweb-softwares.click"
    secretName: "solucao-laser-tls"
  - hosts:
    - "solucao-laser.app-danweb-softwares.click"
    secretName: "solucao-laser-front-tls"
  rules:
  - host: solucao-laser.api-danweb-softwares.click
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: solucao-laser-back-svc
            port: 
              number: 80
  - host: solucao-laser.app-danweb-softwares.click
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: solucao-laser-front-svc
            port: 
              number: 80
